* [L#190469] Fixed kick message filtering (thanks mikejj)
* version.xml now use Coral (ullner)
* [ADC] Number of files counts unique files when sending stats to hub 
* [ADC] Fixed kick handling
* [L#190955] Fixed 100% on remove all sources in queue
* Fixed a few hardcoded dc++'s (thanks steven sheehy)
* Don't always show the tray icon after killing and re-opening explorer.exe (poy)

-- 0.704 2007-12-14 --
* Hub lists added to utilize Coral's distributed network (ullner)
* Use system header arrows on common controls 6+ (thanks poy)
* Fixed badly drawn arrows (thanks poy)
* Fixed transfer view header widths (thanks james ross)
* Fixed about years (thanks james ross)
* Fixed version info (poy)
* Keep selection visible on move up/down in some list views (poy)
* Fixed clicking in the header of the favorite hubs list view (poy)
* Update most things to ADC 1.0
* Fixed pressing enter in the notepad (poy)
* Fixed user commands params (poy)
* Readded list view double buffering (thanks poy)
* Fixed some msvc compile issues (thanks james ross)
* Fixed key handling in file listings (poy)
* Message always focused first in chats (poy)
* Fixed filter in public hubs (thanks poy)
* Fixed missing title changes on tab change (thanks poy)
* Fixed user list filter (poy)
* Readded chat message box auto-scroll (poy)
* Fixed tab order in public hubs (poy)
* Tooltips for toolbars (thanks poy)
* Close tab with middle mouse button (thanks poy)
* Fixed socket ip bind (thanks garg's quasi-friend)
* Finished UCMD extension draft implementation
* Fixed status bars (poy)
* Fixed protocol error STA being sent as type C
* Fixed a multisource download crash
* Fixed state checks for uploads (an invalid sequence could possibly crash client from remote)
* Page up/down in private chat scrolls chat log just as in hub chat
* Fixed crash on right-click in the download queue (poy)
* Readded waiting users frame keyboard shortcut
* Handle some QUI flags (thanks pret/poy)

-- 0.703 2007-11-08 --