@@ -21,8 +21,8 @@ public:
 	virtual void on(Tick, const UploadList&) throw() { }
 	virtual void on(Complete, Upload*) throw() { }
 	virtual void on(Failed, Upload*, const string&) throw() { }
-	virtual void on(WaitingAddFile, const UserPtr, const string&) throw() { }
-	virtual void on(WaitingRemoveUser, const UserPtr) throw() { }
+	virtual void on(WaitingAddFile, const UserPtr&, const string&) throw() { }
+	virtual void on(WaitingRemoveUser, const UserPtr&) throw() { }
 
 };
 
