@@ -35,6 +35,7 @@
 * [L#190955] Fixed 100% on remove all sources in queue
 * Fixed a few hardcoded dc++'s (thanks steven sheehy)
 * Don't always show the tray icon after killing and re-opening explorer.exe (poy)
+* Updated links (thanks pietry)
 
 -- 0.704 2007-12-14 --
 * Hub lists added to utilize Coral's distributed network (ullner)
